# Yanka_Dubrovka

./: CMakeLists.txt  README.md
cmake/: FindGLEW.cmake
data/: china.mtl  quad2
shader/: light_frag .glsl  light_vert.glsl
src/playground/: MeshWindow.cpp  MeshWindow.h  camera.h  renderable.h  scene.cpp  window.cpp
src/playground/object/: Cube.cpp  Cube.h  Door.cpp  Door.h  Ground.cpp  Ground.h  RenderableObject.cpp  RenderableObject.h
src/playground/objects/: Deer_child.cpp  background.cpp  corn.cpp  crow.cpp  deer.cpp  falling_tree.cpp  fireflies.cpp  flower.cpp  ground.cpp  lake.cpp  moon.cpp  player.cpp  tree.cpp  wolf.cpp
src/playground/shapes/: cube.cpp  sphere.cpp
